--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am a part-time student in the boot camp.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I am from Chicago, IL.</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I enjoy reading, writing, and traveling.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>My dream job is to teach Black children, teenagers, and adults how to code. </p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>I live in Chicago, IL.</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I want to be a web developer because I have always been interested in the field.</p>
     </section>
 
     <footer id="footer">
